# tensorflow-course-assigments

./: pyproject.toml
C1/W1/assignment/: C1W1_Assignment.ipynb
C1/W2/assignment/: C1W2_Assignment.ipynb
C1/W3/assignment/: C1W3_Assignment.ipynb
C1/W4/assignment/: C1W4_Assignment.ipynb
