[tool.poetry]
name = "course"
version = "0.1.0"
description = ""
authors = ["lilsussyjett"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
spicy = "^0.16.0"
scipy = "^1.12.0"
tensorflow = "2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
